<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="anjaroot">AnJaRoot</string>
    <string name="permission_description">unrestricted (superuser) access to device</string>
    <string name="permission_label">AnJaRoot grants, if you confirmed this, unrestricted access to your device, including sensitive parts of your device. This permission is potentially dangerous.</string>

    <!-- Installer.java -->
    <string name="installer_working_title">AnJaRoot</string>
    <string name="installer_working_message">Working&#8230;</string>
    <string name="installer_toast_success">Operation successful!</string>
    <string name="installer_toast_failure">Operation failed, see logcat for information!</string>
    <string name="installer_toast_reboot_failure">Reboot failed, see logcat for information!</string>

    <!-- packages_list.xml -->
    <string name="packages_list_empty">Empty</string>

    <!-- packages_list_menu.xml -->
    <string name="action_delete_all">Delete all items</string>
    <string name="action_info">Info</string>
    <string name="action_buy_donate">Buy Donate Version</string>

    <!-- PackagesFragment.java -->
    <string name="packages_list_delete_all_title">Confirmation</string>
    <string name="packages_list_delete_all_msg">Do you want to revoke all permissions? This will stop running apps violently if running.</string>
    <string name="packages_list_delete_all_positive">Revoke</string>
    <string name="packages_list_delete_all_negative">Cancel</string>
    <string name="packages_list_delete_single_title">Confirmation</string>
    <string name="packages_list_delete_single_msg">Revoke permission for %s? This will stop the app violently if it\'s currently running.</string>
    <string name="packages_list_delete_single_positive">Revoke</string>
    <string name="packages_list_delete_single_negative">Cancel</string>

    <!-- install_fragment.xml -->
    <string name="install_fragment_install_text">AnJaRoot is currently not installed on your device.</string>
    <string name="install_fragment_install_btn_text">Install AnJaRoot</string>
    <string name="install_fragment_reboot_text">Preparation was successful, boot now into recovery to finish the installation.</string>
    <string name="install_fragment_reboot_btn_text">Reboot into Recovery</string>

    <!-- InstallFragment.java -->
    <string name="install_fragment_install_dialog_title">Confirmation</string>
    <string name="install_fragment_install_dialog_msg">Do you want to install AnJaRoot?</string>
    <string name="install_fragment_install_dialog_positive">Install</string>
    <string name="install_fragment_install_dialog_negative">Cancel</string>
    <string name="install_fragment_reboot_title">Confirmation</string>
    <string name="install_fragment_reboot_msg">Do you want to reboot into recovery now?</string>
    <string name="install_fragment_reboot_positive">Reboot now</string>
    <string name="install_fragment_reboot_negative">No</string>

    <!-- request_activity.xml -->
    <string name="request_activity_name">AnJaRoot Request</string>
    <string name="request_activity_deny_btn_text">Deny</string>
    <string name="request_activity_grant_btn_text">Grant</string>
    <string name="request_activity_icon_description">Requester Icon</string>
    <string name="request_activity_title_text">%s requests Access</string>
    <string name="request_activity_description_text">Warning: This will allow the requester to execute commands as \'root\'. If you don\'t know what this is, deny this request.\n\nDenying will prevent the app from issuing a request again within 5 seconds to prevent spam.</string>
    <string name="request_activity_app_name">%s</string>

    <!-- packages_list_item.xml -->
    <string name="packages_list_item_icon_description">Package Icon</string>

    <!-- info_fragment.xml -->
    <string name="info_icon_description">AnJaRoot Logo</string>
    <string name="info_version">Version %1$s (Native: %2$s)</string>
    <string name="info_text">AnJaRoot is licensed under the GPLv3. You can download the source, the library and other resources at http:\/\/www.anjaroot.net.</string>

</resources>